docs/book/samples/appa/shadowed_check.out
error[name]: `greet` is already a declaration; rename the binding
  --> shadowed_check.kso:5:3
   5 |   greet = 1
         ^
