docs/book/samples/appa/shadowed_check.kso
fn greet name
  "hi, {name}"

pub play =
  greet = 1
  print "{greet}"
